--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-app-intro-slider": "^2.0.1",
+    "react-native-calendars": "^1.27.0",
     "react-native-slideshow": "^1.0.1",
     "react-native-snap-carousel": "^3.7.5",
     "react-native-swiper": "^1.5.14",
